# MNIST-CIM-FPGA

./: .gitignore  README.md  dev-model&software.md
.pyre/: pyre.stderr
AI-used/: MNIST-FPGA.1.md  MNIST-FPGA.2.md  MNIST-FPGA.3.md  MNIST-FPGA.4.md  MNIST-FPGA.5.md  route_b_output_usage_guide.md
CIM-hw-version1/rtl/: fc1_weight_bank.sv  (+2 more)
FPGA_A/: README.md
FPGA_A_mini/: README.md
FPGA_A_mini/sw/: mini_test.ipynb  pyproject.toml
FPGA_A_mini/sw/route_b_output_mini/: fc1_acc_0.hex  fc1_acc_1.hex  fc1_acc_10.hex  fc1_acc_11.hex  fc1_acc_12.hex  fc1_acc_13.hex  fc1_acc_14.hex  fc1_acc_15.hex  fc1_acc_16.hex  fc1_acc_17.hex  fc1_acc_18.hex  fc1_acc_19.hex  fc1_acc_2.hex  fc1_acc_3.hex  fc1_acc_4.hex  fc1_acc_5.hex  fc1_acc_6.hex  fc1_acc_7.hex  fc1_acc_8.hex  fc1_acc_9.hex  fc1_bias_int32.hex  fc1_out_0.hex  fc1_out_1.hex  fc1_out_10.hex  fc1_out_11.hex  fc1_out_12.hex  fc1_out_13.hex  fc1_out_14.hex  fc1_out_15.hex  fc1_out_16.hex  fc1_out_17.hex  fc1_out_18.hex  fc1_out_19.hex  fc1_out_2.hex  fc1_out_3.hex  fc1_out_4.hex  fc1_out_5.hex  fc1_out_6.hex  fc1_out_7.hex  fc1_out_8.hex  (+80 more)
FPGA_A_mini_fc1/: README.md
FPGA_mini/: README.md
FPGA_ultra_mini/: README.md
MNIST-simple-mlp/: pyproject.toml
MNIST-simple-mlp/.pyre/: pyre.stderr
MNIST-simple-mlp/sw/train&quantize/: full_test.ipynb  simple_mlp.pth  train_simple_mlp.ipynb
MNIST-simple-mlp/sw/train&quantize/quantized_data/: bias.hex  golden_3.hex  input_5.hex  quant_params.npz  weights.hex
docs/: data_asset_map.md  folder_guide.md  project_timeline.md
hw/: tree.txt
onboard_A/: README.md
sw/: README.md
(+1740 files in other folders)
