[project]
name = "mnist-simple-mlp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Invoker-pray", email = "jiaohongbao04@gmail.com" }
]
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "jupyter>=1.1.1",
    "tqdm>=4.67.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mnist_simple_mlp"]
